--- a/resources/templates/admin-form.html
+++ b/resources/templates/admin-form.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
+{{define "head"}}
 	<style type="text/css">
 	    form, textarea, input {
 			display: block;
@@ -14,11 +11,11 @@
 			
 		}
 	</style>
-</head>
-<body>
+{{end}}
+
+{{define "body"}}
 	<form method="post" action="/admin/save">
 		<textarea name="words"></textarea>
 		<input type="submit" value="Сохранить">
 	</form>
-</body>
-</html>
+{{end}}
