--- a/resources/templates/question.html
+++ b/resources/templates/question.html
@@ -15,8 +15,8 @@
 	<div>Уважаемый, {{.name}}!</div>
 	<div>Выбeрите, что для вас важнее</div>
 	<form method="post" action="/answer">
-		<div><input type="radio" name="answer" value="{{.id1}}" id="s1"><label for="s1">{{.sentence1}}</label></div>
-		<div><input type="radio" name="answer" value="{{.id2}}" id="s2"><label for="s2">{{.sentence2}}</label></div>
+		<div><input type="radio" name="answer" value="{{.id1}}" id="s1" required><label for="s1">{{.sentence1}}</label></div>
+		<div><input type="radio" name="answer" value="{{.id2}}" id="s2" required><label for="s2">{{.sentence2}}</label></div>
 		<input type="submit" value="Далее">
 	</form>
 {{end}}
