--- a/resources/templates/select-name.html
+++ b/resources/templates/select-name.html
@@ -15,7 +15,7 @@
 {{define "body"}}
 	Введите имя
 	<form method="post" action="/save-name">
-		<input id="name" type="text" name="name">
+		<input id="name" type="text" name="name" required>
 		<input type="submit" value="Начать">
 	</form>
 {{end}}
