--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -3,10 +3,23 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+		<script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		{{template "head" .}}
 	</head>
 	<body>
-		{{template "body" .}}
-	</body>
+
+	<div class="container">
+		<div class="page-header">
+			<h1>Опросник</h1>
+			</div>
+			{{template "body" .}}
+		
+
+	</div>
+
 </html>
 {{end}}
