--- a/resources/templates/question.html
+++ b/resources/templates/question.html
@@ -12,11 +12,11 @@
 {{end}}
 
 {{define "body"}}
-	<div>Уважаемый, {{.name}}!</div>
-	<div>Выбeрите, что для вас важнее</div>
+	<p>Уважаемый, {{.name}}!<br>
+	Выбeрите, что для вас важнее</p>
 	<form method="post" action="/answer">
-		<div><input type="radio" name="answer" value="{{.id1}}" id="s1" required><label for="s1">{{.sentence1}}</label></div>
-		<div><input type="radio" name="answer" value="{{.id2}}" id="s2" required><label for="s2">{{.sentence2}}</label></div>
-		<input type="submit" value="Далее">
+		<div class="radio"><label for="s1"><input type="radio" name="answer" value="{{.id1}}" id="s1" required>{{.sentence1}}</label></div>
+		<div class="radio"><label for="s2"><input type="radio" name="answer" value="{{.id2}}" id="s2" required>{{.sentence2}}</label></div>
+		<input type="submit" value="Далее" class="btn btn-primary btn-lg">
 	</form>
 {{end}}
